<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Dagger1" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/getInstance1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_instance_1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/getInstance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_instance_2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/getInstance3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_instance_3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/singleton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singleton"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/objectGraphPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_graph_plus"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/lazyInjections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lazy_injections"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>